--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=pizza-tdd
+spring.datasource.url = jdbc:postgresql://localhost:5432/pizzas
+spring.datasource.username = user
+spring.datasource.password = password
+spring.jpa.hibernate.ddl-auto = update
